<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.khaledahmed.connectfcis.RegisterActivity">

    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/f_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/l_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/select_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="@color/colorWhite" />

    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Male"
            android:padding="15dp"

            android:textColor="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/female_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:padding="15dp"

            android:textColor="@color/colorPrimary" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <ImageButton
            android:id="@+id/birth_date_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"

            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:onClick="showDate"
            android:src="@drawable/calendar" />

        <TextView
            android:id="@+id/birth_date_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/birth_date_btn"
            android:padding="15dp"
            android:text="Ex: 01/01/1900"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/user_type_spin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"

        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:text="@string/register_btn"
        android:padding="15dp"

        android:textColor="@color/colorWhite" />
</LinearLayout>
</ScrollView>