<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.khaledahmed.connectfcis.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_gravity="center"
            android:src="@drawable/fcis" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/login_username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:ems="10"
            android:padding="15dp"

            android:hint="@string/username"
            android:layout_below="@id/login_logo"
            android:gravity="left"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorWhite"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:padding="15dp"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"

            android:textColorHint="@color/colorWhite" />

        <CheckBox
            android:id="@+id/rememberMeOption_cb"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
            android:text="Remember Me"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"

            android:text="@string/sign_in"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:onClick="forgetPassword"
            android:text="Forget your password?"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/skip_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forget_password_link"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="skipToHome"
            android:layout_weight="1"
            android:padding="10dp"

            android:text="Skip for now."
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skip_link"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"

            android:onClick="goToRegister"
            android:text="Not a member? Get registered now!"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>